[package]
name = "td"
version = "0.1.0"
authors = ["Michael Angerman <stormasm@gmail.com>"]

description = """Command line interface for Tantivy, a search engine library."""
documentation = "https://github.com/tantivy-search/tantivy-cli"
homepage = "https://github.com/tantivy-search/tantivy-cli"
repository = "https://github.com/tantivy-search/tantivy-cli"

readme = "README.md"
keywords = ["search", "information", "retrieval"]

license = "MIT"
edition = "2018"

[dependencies]
time = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "2"

[[bin]]
name = "td"
path = "src/main.rs"


[profile.release]
opt-level = 3
debug = true
debug-assertions = false
lto = true
