[package]
name = "td"
version = "0.1.0"
authors = ["Michael Angerman <stormasm@gmail.com>"]

description = """Command line interface for Tantivy, a search engine library."""
documentation = "https://github.com/tantivy-search/tantivy-cli"
homepage = "https://github.com/tantivy-search/tantivy-cli"
repository = "https://github.com/tantivy-search/tantivy-cli"

readme = "README.md"
keywords = ["search", "information", "retrieval"]

license = "MIT"
edition = "2018"

[dependencies]
time = "0.1"
clap = "2"
tantivy = "0.11.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.7"
log = "0.3"
ansi_term = "0.8"
bincode = "0.4"
byteorder = "0.5"
chan = "0.1"
env_logger = "0.3"

[[bin]]
name = "td"
path = "src/main.rs"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
lto = true
